fix: chat section scrollbar

--- a/chatbot-frontend/src/styles/chatSection.module.scss
+++ b/chatbot-frontend/src/styles/chatSection.module.scss
@@ -16,6 +16,7 @@
 	flex-flow: column-reverse nowrap;
 	flex: 1;
 	padding: 0.5rem;
+	overflow: auto;
 
 	.bubble {
 		margin: 0.5rem;
